Question: In order to get the div#nav li elements to be the proper size, I either had to do 239px (fixed) or 44.25…% (which has a target of 262px) in the mobile/tablet section…239px looked right, but 40…% looked too small horizontally. Thoughts? (the 239 px number came from using the selection tool in PS). Still have to do a little clean up…?

--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,10 @@ div#intro {
 	background-image: url("../img/introBackground.gif");
 }
 
-div#introFigure img {
+div#introFigure {
 	position: absolute;
-	top: -179px;
-	left: 488px;
+	bottom: -4px;
+	right: -155px;
 }
 
 #intro h1,
@@ -111,7 +111,6 @@ Main Section
 ************************************/
 div#main {
 	width: 100%;
-	padding-left: 1.25%; /*12px / 960px*/
 	background: #e9e9e9;
 	border-top: 2px solid #fff;
 	border-bottom: 2px solid #bdbdbd;
@@ -146,6 +145,7 @@ Guitars Section
 ************************************/
 div#guitars {
 	width: 70.729167%; /*679px / 960px*/
+	padding-left: 1.25%; /*12px / 960px*/
 	float: left;
 	padding-left: 1.767305%; /*12px / 679px*/
 }
@@ -177,7 +177,7 @@ div#guitars div p:first-of-type {
 div#guitars div > div {
 	position: absolute;
 	top: 5px;
-	left: 425px;
+	right: 15px;
 }
 
 
@@ -297,16 +297,39 @@ Mobile/Tablet Friendly
 		padding-top: 100px;
 	}
 
+	#intro p,
+	div#guitars,
+	div#aside,
+	div#aside img,
+	div#links > div,
+	div#footer h1 {
+		width: 100%;
+	}
+
 	#header h1 {
 		color: #424242;
 		font-weight: bold;
 	}
 
 	div#nav {
+		background-color: #ffffff;
+	}
+
+	div#nav li {
+		width: 44.256757%; /*262px / 592px*/
+		margin-bottom: 23px;
+		padding: 40px 0px;
+		text-align: center;
+		font-size: 1.7em;
 		background-color: #424242;
 	}
 
+	#nav li:nth-child(odd) {
+		margin-right: 4.391892%; /*26px / 592px*/
+	}
+
 	#nav li a {
+		padding: 40px;
 		color: #e9e9e9;
 	}
 
@@ -318,16 +341,8 @@ Mobile/Tablet Friendly
 		display: none;
 	}
 
-	#intro p {
-		width: 100%;
-	}
-
 	#main img[src$=".jpg"] {
 		border: none;
-	}
-
-	div#guitars {
-		width: 100%;
 	}
 
 	div#guitars div > div {
@@ -336,17 +351,8 @@ Mobile/Tablet Friendly
 	}
 
 	div#aside {
-		width: 101.25%;
-		margin: -1.25%;
+		padding: 1.25%;
 		background-color: #ffffff;
-	}
-
-	div#aside img {
-		width: 100%;
-	}
-
-	div#links > div {
-		width: 100%;
 	}
 
 	div#links h1 {
@@ -357,12 +363,18 @@ Mobile/Tablet Friendly
 		padding-left: 4.942966%; /*26px / 526px*/
 	}
 
+	div#links div:last-of-type {
+		margin-bottom: 100px;
+	}
+
 	div#footer {
+		height: 65px;
 		background-color: #ffffff;
 	}
 
 	div#footer h1 {
-		width: 100%;
+		display: block;
+		margin-bottom: 6px;
 		color: #424242;
 	}
 
@@ -372,6 +384,8 @@ Mobile/Tablet Friendly
 
 	div#footer > div {
 		float: left;
+		margin-top: 0;
+		color: #424242;
 	}
 	
 }
